--- a/booking.html
+++ b/booking.html
@@ -1,38 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="src/style.css">
+  <script defer src="src/script.js"></script>
+
   <title>Frontend Mentor | Dine Website Challenge</title>
 </head>
+
 <body>
+  <header>
+    <h1>Reservations</h1>
 
-  Reservations
+    <p>We can’t wait to host you. If you have any special requirements please feel free to
+      call on the phone number below. We’ll be happy to accommodate you.</p>
 
-  We can’t wait to host you. If you have any special requirements please feel free to 
-  call on the phone number below. We’ll be happy to accommodate you.
+  </header>
+  <main>
+    <form action="">
+      <input type="text" placeholder="Name">
+      <input type="email" placeholder="Email">
 
+      <label for="date">Pick a date</label>
+      <input id="date" type="date">
 
+      <label for="time">Pick a time</label>
+      <input id="time" type="time">
 
-  Name
-  Email
-  Pick a date
-  Pick a time
+      <input type="number" placeholder="4">
+      <button type="submit">Make Reservation</button>
+    </form>
+  </main>
 
-  Make Reservation
+  <footer>
+    <p>Marthwaite, Sedbergh</p>
+    <p>Cumbria</p>
+    <p>+00 44 123 4567</p>
+    <p>Open Times</p>
+    <p>Mon - Fri: 09:00 AM - 10:00 PM</p>
+    <p>Sat - Sun: 09:00 AM - 11:30 PM</p>
 
-
-
-  Marthwaite, Sedbergh
-  Cumbria
-  +00 44 123 4567
-
-  Open Times
-  Mon - Fri: 09:00 AM - 10:00 PM
-  Sat - Sun: 09:00 AM - 11:30 PM
-
+  </footer>
 </body>
+
 </html>
