--- a/index.html
+++ b/index.html
@@ -7,83 +7,109 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="src/style.css">
-  <script src="/src/script.js"></script>
+  <script defer src="src/script.js"></script>
 
   <title>Frontend Mentor | Dine Website Challenge</title>
 </head>
 
 <body>
+  <header>
+    <picture></picture>
+    <h1>Exquisite dining since 1989</h1>
 
-  Exquisite dining since 1989
+    <p>Experience our seasonal menu in beautiful country surroundings. Eat the freshest produce from
+      the comfort of our farmhouse.</p>
 
-  Experience our seasonal menu in beautiful country surroundings. Eat the freshest produce from
-  the comfort of our farmhouse.
+    <button>Book a table</button>
 
-  Book a table
+  </header>
+  <main>
+    <div>
+      <div>
+        <picture></picture>
+        <h2>Enjoyable place for all the family</h2>
+
+        <p>Our relaxed surroundings make dining with us a great experience for everyone. We can even arrange
+          a tour of the farm before your meal.</p>
+      </div>
+
+      <div>
+        <picture></picture>
+        <h2>The most locally sourced food</h2>
+
+        <p>All our ingredients come directly from our farm or local fishery. So you can be sure that you’re
+          eating the freshest, most sustainable food.</p>
+      </div>
+    </div>
+
+    <section class="highlights">
+      <h2>A few highlights from our menu</h2>
+
+      <p>We cater for all dietary requirements, but here’s a glimpse at some of our diner’s favourites.
+        Our menu is revamped every season.</p>
+
+      <div>
+        <h3>Seared Salmon Fillet</h3>
+        <p>Our locally sourced salmon served with a refreshing buckwheat summer salad.</p>
+      </div>
+
+      <div>
+        <h3>Rosemary Filet Mignon</h3>
+        <p>Our prime beef served to your taste with a delicious choice of seasonal sides.</p>
+      </div>
+
+      <div>
+        <h3>Summer Fruit Chocolate Mousse</h3>
+        <p>Creamy mousse combined with summer fruits and dark chocolate shavings.</p>
+      </div>
+    </section>
+
+    <div class="events">
+      <div>
+        <p>Family Gathering</p>
+        <p>Special Events</p>
+        <p>Social Events</p>
+      </div>
+
+      <div>
+        <h3>Family Gathering</h3>
+        <p>We love catering for entire families. So please bring everyone along for a special meal with your
+          loved ones. We’ll provide a memorable experience for all.</p>
+      </div>
+
+      <div>
+        <h3>Special Events</h3>
+        <p>Whether it’s a romantic dinner or special date you’re celebrating with others we’ll look after you.
+          We’ll be sure to mark your special date with an unforgettable meal.</p>
+      </div>
+
+      <div>
+        <h3>Social Events</h3>
+        <p>Are you looking to have a larger social event? No problem! We’re more than happy to cater for big
+          parties. We’ll work with you to make your event a hit with everyone.</p>
+      </div>
+
+      <button>Book a table</button>
+    </div>
 
 
+    <div>
+      <h3>Ready to make a reservation?</h3>
 
-  Enjoyable place for all the family
+      <button>Book a table</button>
+    </div>
+  </main>
 
-  Our relaxed surroundings make dining with us a great experience for everyone. We can even arrange
-  a tour of the farm before your meal.
+  <footer>
+    <p>Marthwaite, Sedbergh</p>
+    <p>Cumbria</p>
+    <p>+00 44 123 4567</p>
 
-  The most locally sourced food
+    <p>Open Times</p>
+    <p>Mon - Fri: 09:00 AM - 10:00 PM</p>
+    <p>Sat - Sun: 09:00 AM - 11:30 PM</p>
 
-  All our ingredients come directly from our farm or local fishery. So you can be sure that you’re
-  eating the freshest, most sustainable food.
-
-
-
-  A few highlights from our menu
-
-  We cater for all dietary requirements, but here’s a glimpse at some of our diner’s favourites.
-  Our menu is revamped every season.
-
-  Seared Salmon Fillet
-  Our locally sourced salmon served with a refreshing buckwheat summer salad.
-
-  Rosemary Filet Mignon
-  Our prime beef served to your taste with a delicious choice of seasonal sides.
-
-  Summer Fruit Chocolate Mousse
-  Creamy mousse combined with summer fruits and dark chocolate shavings.
-
-
-
-  Family Gathering
-  Special Events
-  Social Events
-
-  Family Gathering
-  We love catering for entire families. So please bring everyone along for a special meal with your
-  loved ones. We’ll provide a memorable experience for all.
-
-  Special Events
-  Whether it’s a romantic dinner or special date you’re celebrating with others we’ll look after you.
-  We’ll be sure to mark your special date with an unforgettable meal.
-
-  Social Events
-  Are you looking to have a larger social event? No problem! We’re more than happy to cater for big
-  parties. We’ll work with you to make your event a hit with everyone.
-
-  Book a table
-
-
-
-  Ready to make a reservation?
-
-  Book a table
-
-
-
-  Marthwaite, Sedbergh
-  Cumbria
-  +00 44 123 4567
-
-  Open Times
-  Mon - Fri: 09:00 AM - 10:00 PM
-  Sat - Sun: 09:00 AM - 11:30 PM
+  </footer>
 
 </body>
 
