--- a/booking.html
+++ b/booking.html
@@ -7,7 +7,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="src/style.css">
-  <script defer src="src/script.js"></script>
+  <script defer src="dist/main.js"></script>
 
   <title>Frontend Mentor | Dine Website Challenge</title>
 </head>
@@ -21,15 +21,20 @@
 
   </header>
   <main>
-    <form action="">
-      <input type="text" placeholder="Name">
-      <input type="email" placeholder="Email">
+    <form class="booking-form" action="/" novalidate>
+      <input type="text" id="name" name="name" placeholder="Name" required>
+      <span class="name-error"></span>
+
+      <input type="email" id="email" name="email" placeholder="Email" required>
+      <span class="email-error"></span>
 
       <label for="date">Pick a date</label>
-      <input id="date" type="date">
+      <input id="date" type="date" required>
+      <span class="date-error"></span>
 
       <label for="time">Pick a time</label>
-      <input id="time" type="time">
+      <input id="time" type="time" required>
+      <span class="time-error"></span>
 
       <input type="number" placeholder="4">
       <button type="submit">Make Reservation</button>
