--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="src/style.css">
-  <script defer src="src/script.js"></script>
+  <script defer src="dist/main.js"></script>
 
   <title>Frontend Mentor | Dine Website Challenge</title>
 </head>
