added images and fonts

--- a/booking.html
+++ b/booking.html
@@ -7,13 +7,18 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="src/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@300;400;600;700&display=swap"
+    rel="stylesheet">
   <script defer src="src/form.js"></script>
 
   <title>Frontend Mentor | Dine Website Challenge</title>
 </head>
 
 <body>
-  <header>
+  <header class="reservations">
+    <img src="./src/images/logo.svg" alt="">
     <h1>Reservations</h1>
 
     <p>We can’t wait to host you. If you have any special requirements please feel free to
@@ -42,6 +47,7 @@
   </main>
 
   <footer>
+    <img src="./src/images/logo.svg" alt="">
     <p>Marthwaite, Sedbergh</p>
     <p>Cumbria</p>
     <p>+00 44 123 4567</p>
