--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="src/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@300;400;600;700&display=swap"
+    rel="stylesheet">
   <script defer src="dist/main.js"></script>
 
   <title>Frontend Mentor | Dine Website Challenge</title>
@@ -14,7 +18,13 @@
 
 <body>
   <header>
-    <picture></picture>
+    <picture>
+      <source media="(max-width: 700px)" srcset="./src/images/homepage/hero-bg-mobile.jpg">
+      <source media="(max-width: 1000px)" srcset="./src/images/homepage/hero-bg-tablet.jpg">
+      <img src="./src/images/homepage/hero-bg-desktop.jpg" alt="">
+    </picture>
+
+    <img src="./src/images/logo.svg" alt="">
     <h1>Exquisite dining since 1989</h1>
 
     <p>Experience our seasonal menu in beautiful country surroundings. Eat the freshest produce from
@@ -26,7 +36,16 @@
   <main>
     <div>
       <div>
-        <picture></picture>
+        <picture>
+          <source media="(max-width: 700px)" srcset="./src/images/homepage/enjoyable-place-mobile.jpg">
+          <source media="(max-width: 1000px)" srcset="./src/images/homepage/enjoyable-place-tablet.jpg">
+          <img src="./src/images/homepage/enjoyable-place-desktop.jpg" alt="">
+        </picture>
+
+        <div class="pattern-divide">
+          <img src="./src/images/patterns/pattern-divide.svg" alt="">
+        </div>
+
         <h2>Enjoyable place for all the family</h2>
 
         <p>Our relaxed surroundings make dining with us a great experience for everyone. We can even arrange
@@ -34,36 +53,64 @@
       </div>
 
       <div>
-        <picture></picture>
+        <picture>
+          <source media="(max-width: 700px)" srcset="./src/images/homepage/locally-sourced-mobile.jpg">
+          <source media="(max-width: 1000px)" srcset="./src/images/homepage/locally-sourced-tablet.jpg">
+          <img src="./src/images/homepage/locally-sourced-desktop.jpg" alt="">
+        </picture>
+
         <h2>The most locally sourced food</h2>
+
+        <div class="pattern-divide">
+          <img src="./src/images/patterns/pattern-divide.svg" alt="">
+        </div>
 
         <p>All our ingredients come directly from our farm or local fishery. So you can be sure that you’re
           eating the freshest, most sustainable food.</p>
       </div>
     </div>
 
+    <!-- Menu Highlights -->
     <section class="highlights">
+
+      <div class="pattern-divide">
+        <img src="./src/images/patterns/pattern-divide.svg" alt="">
+      </div>
+
       <h2>A few highlights from our menu</h2>
 
       <p>We cater for all dietary requirements, but here’s a glimpse at some of our diner’s favourites.
         Our menu is revamped every season.</p>
 
       <div>
+        <picture>
+          <source media="(max-width: 700px)" srcset="./src/images/homepage/salmon-mobile.jpg">
+          <img src="./src/images/homepage/salmon-desktop-tablet.jpg" alt="">
+        </picture>
         <h3>Seared Salmon Fillet</h3>
         <p>Our locally sourced salmon served with a refreshing buckwheat summer salad.</p>
       </div>
 
       <div>
+        <picture>
+          <source media="(max-width: 700px)" srcset="./src/images/homepage/beef-mobile.jpg">
+          <img src="./src/images/homepage/beef-desktop-tablet.jpg" alt="">
+        </picture>
         <h3>Rosemary Filet Mignon</h3>
         <p>Our prime beef served to your taste with a delicious choice of seasonal sides.</p>
       </div>
 
       <div>
+        <picture>
+          <source media="(max-width: 700px)" srcset="./src/images/homepage/chocolate-mobile.jpg">
+          <img src="./src/images/homepage/chocolate-desktop-tablet.jpg" alt="">
+        </picture>
         <h3>Summer Fruit Chocolate Mousse</h3>
         <p>Creamy mousse combined with summer fruits and dark chocolate shavings.</p>
       </div>
     </section>
 
+    <!-- Events select -->
     <div class="events">
       <picture class="family-images">
         <source media="(max-width: 700px)" srcset="./src/images/homepage/family-gathering-mobile.jpg">
@@ -112,14 +159,16 @@
     </div>
 
 
-    <div>
+    <div class="make-reservation">
       <h3>Ready to make a reservation?</h3>
 
       <button>Book a table</button>
     </div>
   </main>
 
+  <!-- footer -->
   <footer>
+    <img src="./src/images/logo.svg" alt="">
     <p>Marthwaite, Sedbergh</p>
     <p>Cumbria</p>
     <p>+00 44 123 4567</p>
