--- a/booking.html
+++ b/booking.html
@@ -18,12 +18,14 @@
 
 <body>
   <header class="reservations">
-    <img src="./src/images/logo.svg" alt="">
+    <div class="logo"><img src="./src/images/logo.svg" alt=""></div>
+
     <h1>Reservations</h1>
 
     <p>We can’t wait to host you. If you have any special requirements please feel free to
       call on the phone number below. We’ll be happy to accommodate you.</p>
 
+    <a class="button" href="">Reserve place</a>
   </header>
   <main>
     <form class="booking-form" action="/" novalidate>
@@ -47,7 +49,8 @@
   </main>
 
   <footer>
-    <img src="./src/images/logo.svg" alt="">
+    <div class="logo"><img src="./src/images/logo.svg" alt=""></div>
+
     <p>Marthwaite, Sedbergh</p>
     <p>Cumbria</p>
     <p>+00 44 123 4567</p>
