added select class to events select with toggle, updated form styles

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       </picture>
 
       <div class="event-select">
-        <p class="family-select">Family Gathering</p>
+        <p class="family-select selected">Family Gathering</p>
         <p class="special-select">Special Events</p>
         <p class="social-select">Social Events</p>
       </div>
